--- a/interfaces/Config/templates/config_notify.tmpl
+++ b/interfaces/Config/templates/config_notify.tmpl
@@ -662,6 +662,76 @@
 		   </fieldset>
 	   </div><!-- /col1 -->
 	</div><!-- /section -->
+    <div class="section" id="nscript">
+        <div class="col2">
+            <h3>$T('section-NScript')</h3>
+            <table>
+                <tr>
+                    <td><input type="checkbox" name="nscript_enable" id="nscript_enable" value="1" <!--#if int($nscript_enable) > 0 then 'checked="checked"' else ""#--> /></td>
+                    <td><label for="nscript_enable"> $T('opt-nscript_enable')</label></td>
+                </tr>
+            </table>
+            <em>$T('explain-nscript_enable')</em>
+        </div><!-- /col2 -->
+        <div class="col1" <!--#if int($nscript_enable) > 0 then '' else 'style="display:none"'#-->>
+            <fieldset>
+                <div class="field-pair">
+                    <label class="config" for="nscript_script">$T('opt-nscript_script')</label>
+                    <select name="nscript_script">
+                        <!--#for $sc in $script_list#-->
+                        <option value="$sc" <!--#if $nscript_script.lower()==$sc.lower() then 'selected="selected"' else ""#-->>$Tspec($sc)</option>
+                        <!--#end for#-->
+                    </select>
+                    <span class="desc">$T('explain-nscript_script')</span>
+                </div>
+                <div class="field-pair">
+                    <label class="config wide" for="nscript_prio_startup">$T($notify_texts['startup']).replace('/', ' / ')</label>
+                    <input type="checkbox" name="nscript_prio_startup" id="nscript_prio_startup" value="1" <!--#if int($nscript_prio_startup) > 0 then 'checked="checked"' else ""#--> />
+                </div>
+                <div class="field-pair">
+                    <label class="config wide" for="nscript_prio_download">$T($notify_texts['download']) / $T('link-pause') / $T('link-resume')</label>
+                    <input type="checkbox" name="nscript_prio_download" id="nscript_prio_download" value="1" <!--#if int($nscript_prio_download) > 0 then 'checked="checked"' else ""#--> />
+                </div>
+                <div class="field-pair">
+                    <label class="config wide" for="nscript_prio_pp">$T($notify_texts['pp'])</label>
+                    <input type="checkbox" name="nscript_prio_pp" id="nscript_prio_pp" value="1" <!--#if int($nscript_prio_pp) > 0 then 'checked="checked"' else ""#--> />
+                </div>
+                <div class="field-pair">
+                    <label class="config wide" for="nscript_prio_complete">$T($notify_texts['complete'])</label>
+                    <input type="checkbox" name="nscript_prio_complete" id="nscript_prio_complete" value="1" <!--#if int($nscript_prio_complete) > 0 then 'checked="checked"' else ""#--> />
+                </div>
+                <div class="field-pair">
+                    <label class="config wide" for="nscript_prio_failed">$T($notify_texts['failed'])</label>
+                    <input type="checkbox" name="nscript_prio_failed" id="nscript_prio_failed" value="1" <!--#if int($nscript_prio_failed) > 0 then 'checked="checked"' else ""#--> />
+                </div>
+                <div class="field-pair">
+                    <label class="config wide" for="nscript_prio_queue_done">$T($notify_texts['queue_done'])</label>
+                    <input type="checkbox" name="nscript_prio_queue_done" id="nscript_prio_queue_done" value="1" <!--#if int($nscript_prio_queue_done) > 0 then 'checked="checked"' else ""#--> />
+                </div>
+                <div class="field-pair">
+                    <label class="config wide" for="nscript_prio_disk_full">$T($notify_texts['disk_full'])</label>
+                    <input type="checkbox" name="nscript_prio_disk_full" id="nscript_prio_disk_full" value="1" <!--#if int($nscript_prio_disk_full) > 0 then 'checked="checked"' else ""#--> />
+                </div>
+                <div class="field-pair">
+                    <label class="config wide" for="nscript_prio_warning">$T($notify_texts['warning'])</label>
+                    <input type="checkbox" name="nscript_prio_warning" id="nscript_prio_warning" value="1" <!--#if int($nscript_prio_warning) > 0 then 'checked="checked"' else ""#--> />
+                </div>
+                <div class="field-pair">
+                    <label class="config wide" for="nscript_prio_error">$T($notify_texts['error'])</label>
+                    <input type="checkbox" name="nscript_prio_error" id="nscript_prio_error" value="1" <!--#if int($nscript_prio_error) > 0 then 'checked="checked"' else ""#--> />
+                </div>
+                <div class="field-pair">
+                    <label class="config wide" for="nscript_prio_other">$T($notify_texts['other'])</label>
+                    <input type="checkbox" name="nscript_prio_other" id="nscript_prio_other" value="1" <!--#if int($nscript_prio_other) > 0 then 'checked="checked"' else ""#--> />
+                </div>
+                <div class="field-pair">
+                   <button class="btn btn-default saveButton"><span class="glyphicon glyphicon-ok"></span> $T('button-saveChanges')</button>
+                   <button class="btn btn-default" type="button" id="test_nscript"><span class="glyphicon glyphicon-comment"></span> $T('testNotify')</button>
+                   <span id="testnscript-result" class="icon path darkred">&nbsp;</span>
+               </div>
+           </fieldset>
+       </div><!-- /col1 -->
+    </div><!-- /section -->
     </form>
 </div><!-- /colmask -->
 
@@ -669,7 +739,7 @@
 \$(document).ready(function(){
     // Autocomplete and filebrowser
     \$('#email_dir').typeahead().fileBrowser();
-    
+
     // Expand on enable
     \$('.col2 input[name$="enable"]').change(function() {
         if(this.checked) {
@@ -679,7 +749,7 @@
         }
         \$('form').submit()
     })
-    
+
     /**
         Testing functions
     **/
@@ -749,6 +819,30 @@
                   \$('#testnotice-result').addClass("success").html('$T('smpl-notesent')');
                 } else {
                   \$('#testnotice-result').addClass("failure").html(data.error);
+                }
+            }
+        });
+    });
+    \$('#test_nscript').click(function () {
+        var data = { mode: 'test_nscript', apikey: '$session', output: 'json' };
+        \$("#nscript").extractFormDataTo(data);
+        \$.ajax({
+            type: "GET",
+            url: "../../tapi",
+            data: data,
+            beforeSend: function () {
+                \$('#test_nscript').attr("disabled", "disabled");
+                \$('#testnscript-result').removeClass("success failure").addClass("loading").html('$T('post-Verifying')');
+            },
+            complete: function () {
+                \$('#test_nscript').removeAttr("disabled");
+                \$('#testnscript-result').removeClass("loading");
+            },
+            success: function (data) {
+                if (data.status == true) {
+                  \$('#testnscript-result').addClass("success").html('$T('smpl-notesent')');
+                } else {
+                  \$('#testnscript-result').addClass("failure").html(data.error);
                 }
             }
         });
