--- a/interfaces/Config/templates/config_scheduling.tmpl
+++ b/interfaces/Config/templates/config_scheduling.tmpl
@@ -17,7 +17,7 @@ else:
         <div class="col2">
             <h3>$T('addSchedule') <a href="$helpuri$help_uri" target="_blank"><span class="glyphicon glyphicon-question-sign"></span></a></h3>
         </div><!-- /col2 -->
-        <form action="addSchedule" method="post">
+        <form action="addSchedule" method="post" autocomplete="off">
         <input type="hidden" id="session" name="session" value="$session" />
         <div class="col1">
             <fieldset>
