Enable and notify users about Multipar

--- a/interfaces/Config/templates/config_switches.tmpl
+++ b/interfaces/Config/templates/config_switches.tmpl
@@ -167,9 +167,9 @@
                     </div>
                     <!--#end if#-->
                     <div class="field-pair">
-                        <label class="config" for="multipar">Enable MultiPar</label>
+                        <label class="config" for="multipar">$T('opt-par2_multipar')</label>
                         <input type="checkbox" name="multipar" id="multipar" value="1" <!--#if int($multipar) > 0 then 'checked="checked"' else ""#--> />
-                        <span class="desc">$T('explain-par2_multicore')</span>
+                        <span class="desc">$T('explain-par2_multipar')</span>
                     </div>
                     <!--#end if#-->
                     <div class="field-pair">
