Firefox needs more time to process the Server AJAX

--- a/interfaces/Config/templates/config_server.tmpl
+++ b/interfaces/Config/templates/config_server.tmpl
@@ -316,7 +316,7 @@
             // Let us leave!
             formWasSubmitted = true;
             formHasChanged = false;
-            location.reload();
+            setTimeout(function() { location.reload(); }, 100)
         }
         return false;
     });
@@ -326,7 +326,7 @@
             // Let us leave!
             formWasSubmitted = true;
             formHasChanged = false;
-            location.reload();
+            setTimeout(function() { location.reload(); }, 100)
         }
         return false;
     });
@@ -340,7 +340,7 @@
             // Let us leave!
             formWasSubmitted = true;
             formHasChanged = false;
-            location.reload();
+            setTimeout(function() { location.reload(); }, 100)
         });
     });
 });
