Add HTML login page
Based on Cookies. We create an unique cookie based on user-IP,
SAB-process-ID and a salt to facilitate also log-out.
Yes, this cookie can be stolen when on a public wifi-network (same IP)
when not on HTTPS, but so can basic-auth requests.

--- a/interfaces/Config/templates/config_general.tmpl
+++ b/interfaces/Config/templates/config_general.tmpl
@@ -34,6 +34,11 @@
                     <span class="desc">$T('explain-web_password')</span>
                 </div>
                 <div class="field-pair">
+                    <label class="config" for="html_login">$T('opt-html_login')</label>
+                    <input type="checkbox" name="html_login" id="html_login" value="1" <!--#if int($html_login) > 0 then 'checked="checked"' else ""#--> />
+                    <span class="desc">$T('explain-html_login')</span>
+                </div>
+                <div class="field-pair">
                     <label class="config" for="web_dir">$T('opt-web_dir')</label>
                         <select name="web_dir" id="web_dir">
                         <!--#for $webline in $web_list#-->
