Allow "None" as selection for secondary skin.

--- a/interfaces/Config/templates/config_general.tmpl
+++ b/interfaces/Config/templates/config_general.tmpl
@@ -49,6 +49,7 @@
                 <div class="field-pair">
                     <label class="config" for="web_dir2">$T('opt-web_dir2')</label>
                         <select name="web_dir2" id="web_dir2">
+                        <option value="None" selected="selected">$T("None")</option>
                         <!--#for $webline in $web_list#-->
                             <!--#if $webline.lower() == $web_dir2.lower()#-->
                                 <option value="$webline" selected="selected">$webline</option>
