--- a/interfaces/Config/templates/config_scheduling.tmpl
+++ b/interfaces/Config/templates/config_scheduling.tmpl
@@ -48,9 +48,17 @@ else:
                 <div class="field-pair">
                     <label class="config" for="action">$T('sch-action')</label>
                     <select name="action" id="action">
-                        <!--#for $action in $actions#-->
-                            <option value="$action">$actions_lng[$action]</option>
-                        <!--#end for#-->
+                        <optgroup label="$T('sch-action')">
+                            <!--#for $action in $actions#-->
+                                <option value="$action" data-action="">$actions_lng[$action]</option>
+                            <!--#end for#-->
+                        </optgroup>
+                        <optgroup label="$T('cmenu-servers')">
+                            <!--#for $server in $actions_servers.keys()#-->
+                                <option value="$server" data-action="1">$T('sch-enable_server') "$actions_servers[$server]"</option>
+                                <option value="$server" data-action="0">$T('sch-disable_server') "$actions_servers[$server]"</option>
+                            <!--#end for#-->
+                        </optgroup>
                     </select>
                 </div>
                 <div class="field-pair">
@@ -97,5 +105,10 @@ else:
         </div><!-- /col1 -->
     </div><!-- /section -->
 </div><!-- /colmask -->
-
+<script type="text/javascript">
+    \$('#action').on('change', function() {
+        // Set the action
+        \$('#arguments').val((\$(this).find('option:selected').data('action')))
+    })
+</script>
 <!--#include $webdir + "/_inc_footer_uc.tmpl"#-->
