--- a/interfaces/Glitter/templates/static/stylesheets/glitter.css
+++ b/interfaces/Glitter/templates/static/stylesheets/glitter.css
@@ -475,6 +475,7 @@ tbody>tr>td:last-child {
     padding: 10px 10px 10px 10px;
     margin: -10px -10px -10px 0px;
     display: inline-block;
+    outline: none !important;
 }
 
 .info-container .info-container-box-sorting .dropdown-menu {
