Add a link on the main Config page, to the "issues" page on the Wiki

--- a/interfaces/Config/templates/config.tmpl
+++ b/interfaces/Config/templates/config.tmpl
@@ -49,6 +49,10 @@
                     <td class="infoTableHeader">$T('menu-irc') </td>
                     <td class="infoTableCell"><a href="irc://irc.synirc.net/#sabnzbd"><i>#sabnzbd</i> on <i>irc.synirc.net</i></a> $T('or') (<a href="http://sabnzbd.org/live-chat/" target="_blank">webchat</a>)</td>
                 </tr>
+                <tr>
+                    <td class="infoTableHeader">$T('menu-issues') </td>
+                    <td class="infoTableCell"><a href="http://wiki.sabnzbd.org/issues-0-8-0" target="_blank">http://wiki.sabnzbd.org/issues-0-8-0</a></td>
+                </tr>
             </tbody>
         </table>
     </div>
