Improve message about no localStorage
It happens more than I expected, so better make a proper message.

--- a/interfaces/Glitter/templates/main.tmpl
+++ b/interfaces/Glitter/templates/main.tmpl
@@ -76,6 +76,7 @@
             glitterTranslate.chooseFile = "$T('Glitter-chooseFile')";
             glitterTranslate.orphanedJobsMsg = "$T('explain-orphans')";
             glitterTranslate.useCache = "$T('explain-cache_limitstr')";
+            glitterTranslate.noLocalStorage = "$T('Glitter-noLocalStorage')";
             glitterTranslate.updateAvailable = "$T('Glitter-updateAvailable')";
             glitterTranslate.defaultText = "$T('default')";
             glitterTranslate.noneText = "$T('None')";
