--- a/interfaces/Glitter/templates/static/stylesheets/glitter.css
+++ b/interfaces/Glitter/templates/static/stylesheets/glitter.css
@@ -1404,6 +1404,11 @@ tr.queue-item>td:first-child>a {
     max-width: 100px;
 }
 
+.btn-file, 
+input[name="nzbURL"] {
+    transition : border 500ms ease-out;
+}
+
 /* HELP MODAL */
 
 #modal-help {
