--- a/interfaces/Config/templates/config_server.tmpl
+++ b/interfaces/Config/templates/config_server.tmpl
@@ -126,7 +126,7 @@
     <input type="hidden" name="session" value="$session" />
     <input type="hidden" name="server" value="$server['name']" />
 
-    <div class="section">
+    <div class="section <!--#if int($server['enable']) == 0 then 'server-disabled' else ""#-->">
         <div class="col2 <!--#if int($server['enable']) == 0 then 'server-disabled' else ""#-->">
             <h3>$server['displayname'] <a href="$helpuri$help_uri" target="_blank"><span class="glyphicon glyphicon-question-sign"></span></a></h3>
             <!--#if int($server['enable']) != 0#-->
@@ -286,6 +286,9 @@
         Click events
     **/
     \$('.showserver').click(function () {
+        if(\$(this).parent().hasClass('server-disabled')) {
+            \$(this).parent().parent().toggleClass('server-disabled')
+        }
         \$(this).parent().next().toggle();
         \$(this).parent().next().next().toggle();
         if (\$(this).attr("value") == "$T('showDetails')") {
