Adding overlay-notifications to Glitter

--- a/interfaces/Glitter/templates/include_modals.tmpl
+++ b/interfaces/Glitter/templates/include_modals.tmpl
@@ -1,3 +1,43 @@
+<!-- Notifcation box -->
+<div class="main-notification-box" style="display: none">
+    <div class="main-notification-box-uploading">
+        <span class="glyphicon glyphicon-open"></span> $T('Glitter-notification-uploading') <span class="main-notification-box-file-count"></span>
+    </div>
+
+    <div class="main-notification-box-queue-repair">
+        <span class="glyphicon glyphicon glyphicon-wrench"></span> $T('Glitter-repairQueue')
+    </div>
+
+    <div class="main-notification-box-disconnect">
+        <span class="glyphicon glyphicon-minus-sign"></span> $T('Glitter-notification-disconnect')
+    </div>
+
+    <div class="main-notification-box-rss_now">
+        <span class="glyphicon glyphicon-chevron-right"></span> $T('button-rssNow')
+    </div>
+
+    <div class="main-notification-box-watched_now">
+        <span class="glyphicon glyphicon-chevron-right"></span> $T('sch-scan_folder')
+    </div>
+
+    <div class="main-notification-box-sorting">
+        <span class="glyphicon glyphicon-sort-by-alphabet"></span> $T('cmenu-sorting')
+    </div>
+
+    <div class="main-notification-box-shutdown">
+        <span class="glyphicon glyphicon-off"></span> $T('Glitter-notification-shutdown')
+    </div>
+
+    <div class="main-notification-box-removing">
+        <span class="glyphicon glyphicon-trash"></span> $T('Glitter-notification-removing1')
+    </div>
+
+    <div class="main-notification-box-removing-multiple">
+        <span class="glyphicon glyphicon-trash"></span> $T('Glitter-notification-removing') (<span class="main-notification-box-file-count"></span>)
+    </div>
+    <span class="loader-dot-one">.</span><span class="loader-dot-two">.</span><span class="loader-dot-three">.</span>
+</div>
+
 <!-- Filedrop and Restarting overlay -->
 <div class="main-filedrop modal-backdrop fade in">
     <span class="glyphicon glyphicon-plus-sign"></span>
