--- a/interfaces/Glitter/templates/include_queue.tmpl
+++ b/interfaces/Glitter/templates/include_queue.tmpl
@@ -9,6 +9,12 @@
             </a>
         </div>
         <!-- /ko -->
+        <!--#if $loadavg#-->
+        <div class="info-container-box" title="$T('ft-sysload') - $T('menu-config') &#10140; $T('cmenu-special') &#10140; show_sysload">
+            <span class="glyphicon glyphicon-record"></span>
+            <span data-bind="text: systemLoad"></span>
+        </div>
+        <!--#end if#-->
         <!-- ko if: (queueDataLeft() != '')  -->
         <div class="info-container-box">
             <span class="glyphicon glyphicon-save"></span>
@@ -22,14 +28,14 @@
             </span>
         </div>
         <!-- /ko -->
-        <div class="info-container-box" data-bind="css: { 'queue-error-info' : diskSpaceExceeded1 }">
+        <div class="info-container-box" data-bind="css: { 'queue-error-info' : diskSpaceExceeded1() }">
             <span class="glyphicon glyphicon-hdd"></span> <span data-bind="text: diskSpaceLeft1"></span>B $T('Glitter-free')
             <!-- ko if: diskSpaceLeft2()  -->
             <em>($T('Glitter-freeTemp'))</em>
             <!-- /ko -->
         </div>
         <!-- ko if: diskSpaceLeft2()  -->
-        <div class="info-container-box"  data-bind="css: { 'queue-error-info' : diskSpaceExceeded2 }">
+        <div class="info-container-box"  data-bind="css: { 'queue-error-info' : diskSpaceExceeded2() }">
             <span class="glyphicon glyphicon-hdd"></span> <span data-bind="text: diskSpaceLeft2"></span>B $T('Glitter-free')
         </div>
         <!-- /ko -->
