Add Pystone score to Glitter status

--- a/interfaces/Glitter/templates/status.tmpl
+++ b/interfaces/Glitter/templates/status.tmpl
@@ -49,6 +49,8 @@
         "localipv4": "$localipv4",
         "publicipv4": "$publicipv4",
         "ipv6": "$ipv6",
+        "pystone": "$pystone",
+        "cpumodel": "$cpumodel",
         "dnslookup": "$dnslookup", 
         <!--#set $downloaddir = $downloaddir.replace('\\','\\\\')#-->
         "downloaddir": "$downloaddir",
